# writ

./: Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
docs/design/: broker.md
docs/user_facing/: audit-log.md  cli-reference.md  configuration.md  getting-started.md  policy.md
src/: audit.rs  config.rs  github.rs  lib.rs  policy.rs  protocol.rs  server.rs
src/core/: decision.rs  grant.rs  mod.rs  request.rs  session.rs
src/secret/: file.rs  keyring_store.rs  mod.rs
tests/: properties.rs
tests/fixtures/: rsa_test_1.pem  rsa_test_1.pub.pem  rsa_test_2.pub.pem
