[package]
name = "agent-infra"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
thiserror = "2"
keyring = { version = "3", features = ["apple-native", "linux-native"] }
rusqlite = { version = "0.38", features = ["bundled"] }

[dev-dependencies]
proptest = "1"
tempfile = "3"
