[package]
name = "writ"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
thiserror = "2"
keyring = { version = "3", features = ["apple-native", "linux-native"] }
rusqlite = { version = "0.38", features = ["bundled"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "fs", "time", "sync", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots", "http2"] }
jsonwebtoken = "9"

[dev-dependencies]
proptest = "1"
tempfile = "3"
wiremock = "0.6"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "test-util"] }
